--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-tweet-embed": "^1.2.2",
+    "react-twitter-embed": "^3.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
