--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.3",
     "react-tweet-embed": "^1.2.2",
     "react-twitter-embed": "^3.0.3",
+    "react-youtube": "^7.13.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
